# rtl-repair

./: .gitignore  .gitmodules  Readme.md  build.sbt  equiv.py  find_state.py  generate_vcd_traces.py  load_all_benchmarks.py  requirements.txt  rtlfix.py  rtlrepair.py  signaldiff.py  test.py
benchmarks/: __init__.py  result.py  run.py  yosys.py
cirfix/: Readme.md  kill_procs.py  make_venv.sh  run.py
demo/: do_repair.py  run_tb.py
equiv/: mux_4_1_wadden_buggy1.rtlrepair.v  mux_4_1_wadden_buggy2.rtlrepair.v
notes/: ComparingSolutions.md  decoder_literal_repl.btor  decoder_literal_repl.v  optimathsat_problem.smt  test.btor  test.v
project/: plugins.sbt
repairs/: __init__.py
rtlfix/: __init__.py  add_inversions.py  expose_branches.py  inverter.py  literal_replacer.py  literalrepl.py  preprocess.py  repair.py  replace_variables.py  synthesizer.py  types.py  utils.py  visitor.py
rtlrepair/: __init__.py  analysis.py  dependency_analysis.py  expose_branches.py  preprocess.py  repair.py  synthesizer.py  types.py  utils.py  visitor.py
scripts/: add_manually_ported_repairs.py  calc_osdd.py  check_repairs.py  create_tables.py  equiv.py  find_state.py  generate_vcd_traces.py  load_all_benchmarks.py  run_rtl_repair_experiment.py  signaldiff.py
synth/: .gitignore  Cargo.toml  basic.smt
synth/src/: basic.rs  filters.rs  incremental.rs  main.rs  repair.rs  testbench.rs  windowing.rs
synth/src/studies/: mod.rs  unrolling.rs  windowing.rs
synth/tests/: synth.rs
synth/tests/inputs/: decoder.original.replace_literals.btor  sha3_w2.replace_literals.btor
(+503 files in other folders)
