[package]
name = "synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "4.4.11", features = ["derive"] }
easy-smt = "0.2.1"
libpatron = "0.4.5"
memmap2 = "0.9.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
serde_json = { version = "1.0.108", features = ["preserve_order"] }
